--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ font-family:"Courier New",monospace;
 overflow:hidden;
 }
 
-/* effet écran CRT */
+/* Effet écran CRT */
 body::after{
 content:"";
 position:fixed;
@@ -99,7 +99,7 @@ animation:scan 2s linear infinite;
 .modal{
 position:fixed;
 inset:0;
-background:rgba(0,0,0,.9);
+background:rgba(0,0,0,.92);
 display:none;
 flex-direction:column;
 padding:30px;
@@ -139,7 +139,7 @@ color:var(--red);
 <div id="scanner"></div>
 </div>
 
-<!-- fenêtre modale -->
+<!-- Fenêtre modale -->
 <div id="modal" class="modal">
 <div class="close" onclick="closeModal()">✖</div>
 <pre id="modalContent"></pre>
@@ -148,14 +148,14 @@ color:var(--red);
 <script>
 const term=document.getElementById("terminal");
 
-function beep(freq=600,dur=0.05){
+function beep(freq=650,dur=0.04){
 const ctx=new(window.AudioContext||window.webkitAudioContext)();
 const osc=ctx.createOscillator();
 const gain=ctx.createGain();
 osc.frequency.value=freq;
 osc.connect(gain);
 gain.connect(ctx.destination);
-gain.gain.value=.08;
+gain.gain.value=.07;
 osc.start();
 setTimeout(()=>osc.stop(),dur*1000);
 }
@@ -178,13 +178,25 @@ t();
 
 async function boot(){
 term.innerHTML="";
+
 await typeText("INITIALISATION DU SYSTÈME...");
+await typeText("PROJET FAN NON COMMERCIAL — MODE EXPÉRIMENTAL.");
+await typeText("STATUT : INTERFACE EN CONSTRUCTION ACTIVE.");
+
+await typeText("MISES À JOUR DÉPLOYÉES RÉGULIÈREMENT :");
+await typeText("• parfois chaque jour");
+await typeText("• parfois chaque semaine");
+await typeText("• lors de certaines phases, presque heure par heure");
+
+await typeText("REVENIR RÉGULIÈREMENT EST RECOMMANDÉ.");
+await typeText("");
+
 await typeText("CHARGEMENT MODULE VOCAL...");
 await typeText("SYNTHÈSE VOCALE : OK");
 await typeText("RECONNAISSANCE VOCALE : OK");
 await typeText("LLM LOCAL : OK");
 await typeText("MODE HORS-LIGNE : ACTIVÉ");
-await typeText("PROJET FAN NON COMMERCIAL.");
+
 await typeText("PROTECTION PAR DROIT D'AUTEUR ACTIVE.");
 await typeText("CONNEXION AU NOYAU KITT ÉTABLIE.");
 }
@@ -202,7 +214,7 @@ function closeModal(){
 document.getElementById("modal").style.display="none";
 }
 
-window.onload=()=>typeText("SYSTÈME EN ATTENTE D'INITIALISATION...");
+window.onload=()=>typeText("SYSTÈME EN ATTENTE — INITIALISATION REQUISE.");
 </script>
 
 </body>
