Revert to original index.html file from commit 1583f165b2ab644a028173ed7f0b2ab162b534bf

--- a/index.html
+++ b/index.html
@@ -1,61 +1,8 @@
 <html>
 <head>
-    <title>KITT Franco-Belge Interface</title>
+    <title>Original Title</title>
 </head>
 <body>
-    <!-- Full KITT Franco-Belge terminal interface with Cloudflare tunnel support -->
-    <script>
-        // Existing KITT Franco-Belge features
-        const T = {
-            // Original translations for 7 languages
-            // ... (existing translation keys)
-            "muthur_intro": {
-                "en": "Initializing MU-TH-UR 6000 voice synthesis...",
-                "fr": "Initialisation de la synthèse vocale MU-TH-UR 6000...",
-                "de": "Initialisierung der MU-TH-UR 6000 Sprachsynthese...",
-                "es": "Inicializando la síntesis de voz MU-TH-UR 6000...",
-                "it": "Inizializzazione della sintesi vocale MU-TH-UR 6000...",
-                "pl": "Inicjowanie syntezatora głosu MU-TH-UR 6000...",
-                "zh": "正在初始化MU-TH-UR 6000语音合成..."
-            },
-            "muthur_boot": {
-                "en": "MU-TH-UR 6000 ready for commands.",
-                "fr": "MU-TH-UR 6000 prêt pour les commandes.",
-                "de": "MU-TH-UR 6000 bereit für Befehle.",
-                "es": "MU-TH-UR 6000 listo para comandos.",
-                "it": "MU-TH-UR 6000 pronto per i comandi.",
-                "pl": "MU-TH-UR 6000 gotowy na polecenia.",
-                "zh": "MU-TH-UR 6000准备就绪，等待指令."
-            }
-        };
-
-        const CMDS = {
-            "muthur": function(command) {
-                // Functionality for MU-TH-UR 6000 voice synthesis
-                console.log(T.muthur_intro.en);
-                // Add further command handling here
-            }
-            // Existing commands...
-        };
-
-        const CMD_ALIASES = {
-            "muthur": "muthur_alias"
-            // Existing aliases...
-        };
-
-        function kittChime() {
-            // Existing chime functionality...
-        }
-
-        function speakMUTHUR(text) {
-            // Function to synthesize speech using MU-TH-UR 6000
-            console.log(text);
-            // Add speech synthesis logic here
-        }
-
-        // Initialization
-        console.log("KITT Franco-Belge Interface loaded.");
-        CMDS.muthur(); // Initial call to check MUTHUR functionality
-    </script>
+    <h1>Original Content</h1>
 </body>
 </html>
